# localhost

./: balance_atomos.py  balance_atomos_at03.py  expect_files.py  exportFiles.py  extraer_financomer_cobis.py  filesExport.py  find_ente.py  main.py  part_exportFiles.py
SQL_count_tbl_cobis/: generateSQL.py  output.sql
base_gen/: __init__.py  _version.py  generator.py  new_package.py
base_gen/templates/vspc/template-migracion-orq2/{{cookiecutter.repo}}/: MANIFEST.IN  README.md  setup.cfg
base_gen/templates/vspc/template-migracion-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/: __init__.py  ejecucion.py  etl.py
base_gen/templates/vspc/template-migracion-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/static/: config.json
base_gen/templates/vspc/template-migracion-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/static/sql/etl/: 001_demo_consulta.sql  999_limpieza.sql
base_gen/templates/vspc/template-migracion-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/static/sql/ingestiones/: 2_insertar_ingestiones.sql  3_obtener_ingestiones.sql
base_gen/templates/vspc/template-migracion-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/static/xlsx/: {{cookiecutter.excel}}.xlsm
base_gen/templates/vspc/template-model-orq2/{{cookiecutter.repo}}/: MANIFEST.in  setup.cfg
base_gen/templates/vspc/template-model-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/: __init__.py  _version.py  ejecucion.py  etl.py  modelo.py  modelo_seleccion.py  utils.py
base_gen/templates/vspc/template-model-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/static/: config.json
base_gen/templates/vspc/template-model-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/static/sql/etl/: 001_demo_consulta.sql  999_limpieza.sql
base_gen/templates/vspc/template-model-orq2/{{cookiecutter.repo}}/src/{{cookiecutter.src_path}}/static/sql/model/: 001_demo_consulta_training.sql  002_demo_consulta_predecir.sql
export_lz_to_txt/: main.py
fuzzy/: fuzzy.py
helper/: __init__.py  _version.py  helper.py  logger.py
master_validation/: __init__.py  _version.py  analisis.py  control.py  logger.py  master_val.py  pilar.py  query.py  seguridad.py  utils.py
masterdata_lz_cobiz_lz/: Diccionario_de_Datos_y_Mapping_Masterdata.xlsx  read_excel.py  tables.py  vpscuenta.xlsx
(+108 files in other folders)
