[versioneer]
VCS = git
style = pep440
versionfile_source = src/{{cookiecutter.src_path}}/_version.py
versionfile_build = {{cookiecutter.src_path}}/_version.py
tag_prefix = ''

[metadata]
name = {{cookiecutter.package_name}}
author = {{cookiecutter.package_author}}
author_email = {{cookiecutter.package_author_email}}
description = {{cookiecutter.package_description}}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >={{cookiecutter.python_version}}
include_package_data = True
install_requires =
    orquestador2>=1.2.2
	vspc-config-utils
	vspc-respaldo-logs
    master-validation
    scikit-learn

[options.package_data]
* = static/*.json, static/sql/etl/*.sql, static/sql/ingestiones/*.sql, static/sql/model/*.sql, static/xlsx/*.xlsx, static/xslx/*.xlsm, 

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    {{cookiecutter.src_path}} = {{cookiecutter.src_path}}.ejecucion:main